Dynamically populated the index page with usernames

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,11 @@
   </head>
   <body>
     <h1><%= title %></h1>
+    <ul>
+      <% usernames.forEach((user) => { %>
+      <p><%= user.username%></p>
+      <%})%>
+    </ul>
     <a href="/new">New Username</a>
   </body>
 </html>
