--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,10 +9,18 @@
     <h1><%= title %></h1>
     <ul>
       <% usernames.forEach((user) => { %>
-      <p><%= user.username%></p>
+      <li>
+        <p><%= user.username%></p>
+      </li>
       <%})%>
     </ul>
     <a href="/new">New Username</a>
     <%- include("../partials/search")%>
+    <h2>Delete all users</h2>
+    <form action="/delete" method="GET">
+      <button type="submit" onclick="return confirm('Delete all users?')">
+        Delete Everyone
+      </button>
+    </form>
   </body>
 </html>
